# podcast-toolkit

./: .gitattributes  .gitignore  DESIGN.md  README.md  TODO.md  build_app.sh  defaults.yaml  install.sh  pyproject.toml  setup_app.py
.claude/: launch.json
.conductor/: settings.toml
.github/workflows/: ci.yml
assets/: AppIcon.icns  intro_music.m4a
docs/review/: 2026-06-04-dashboard-followups.md
podcast_toolkit/: assemble.py  audio_align.py  auto.py  autotrim.py  cameras_io.py  cameras_suggest.py  cli.py  config.py  constants.py  edit.py  episode.py  fsutil.py  gemini_subtitle.py  glossary_candidates.py  ingest_breeze.py  init.py  launcher.py  proofread.py  publish_doc.py  relink.py  resegment.py  seg_check.py  segment_plan.py  sentence_resegment.py  server_lock.py  silencedetect.py  srt_io.py  srt_merge.py  subtitle_cleanup.py  vad_gate.py  waveform.py  word_break.py
podcast_toolkit/web/: api.py  assemble_job.py  dashboard.py  episode_io.py  shared.py  silencedetect.py  transcribe.py  transcribe_job.py  video.py
podcast_toolkit/whisper_guard/: VENDORED.md
scripts/: podcast-ui.sh
templates/: TODO.md  episode.yaml
tests/: conftest.py  regression.sh  test_api_dashboard.py  test_api_routes.py  test_api_video.py  test_assemble_cancel.py  test_assemble_filters.py  test_audio_align.py  test_auto.py  test_autotrim.py  test_cam_modal_save_payload.py  test_cameras_io.py  test_config_merge.py  test_cuts.py  test_dashboard.py  test_editor_ui_smoke.py  test_episode_io.py  test_fsutil.py  test_glossary_candidates.py  test_idle_shutdown.py  test_ingest_breeze.py  test_manual_align.py  test_proofread.py  test_publish_doc.py  test_reels_clips.py  test_resegment.py  test_reveal.py  test_seg_check.py  test_segment_plan.py  test_sentence_resegment.py  test_server_lock.py  test_silencedetect.py  test_srt_io.py  test_srt_merge.py  test_static_cache.py  test_subtitle_cleanup.py  test_transcribe_cancel.py  test_transcribe_job.py  test_transcribe_per_mic.py  test_transcribe_providers.py  (+5 more)
(+26 files in other folders)
