[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-toolkit"
version = "0.1.0"
description = "Podcast 錄製後製工具：分軌轉錄、字幕編輯、自動合成"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    # media.py 的 /api/upload 用 UploadFile/File，FastAPI 處理 form/檔案上傳需要這個(runtime)
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "requests>=2.31",
    # transcribe.py 的簡→繁轉換用 opencc(OpenCC);純 python 版,免編譯
    "opencc-python-reimplemented>=0.1.7",
    # Python 3.9 跑 fastapi/pydantic 的 `X | Y` 型別標註需要這個 backport
    "eval-type-backport>=0.2; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    # fastapi/starlette 的 TestClient 底層用 httpx；少了它 tests/test_api_*.py 會 collection error
    "httpx>=0.27",
]

[project.scripts]
podcast = "podcast_toolkit.cli:main"

[tool.setuptools.packages.find]
include = ["podcast_toolkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = ["dist", ".superpowers", "docs"]

[tool.ruff.lint]
select = [
    "E4", "E7", "E9",  # pycodestyle errors
    "F",               # pyflakes（未使用 import/變數、未定義名稱）
    "B",               # bugbear（mutable default、bare except 風險模式）
    "UP",              # pyupgrade（與 target-version 一致的現代寫法）
]
ignore = [
    "E731",  # lambda 指派在本專案常用於小 callback
    # TODO（技術債，逐步清）：
    "UP006",  # typing.Dict/List → dict/list：等型別現代化一次處理
    "UP035",  # 同上（deprecated typing import）
    "E741",   # 模糊變數名（l 等）：需要安全重新命名
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 的 File(...)/Depends(...) 慣用法會出現在參數預設值，不是 bug
extend-immutable-calls = ["fastapi.File", "fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.per-file-ignores]
# vendored 程式碼不做風格churn（見 whisper_guard/VENDORED.md）
"podcast_toolkit/whisper_guard/*" = ["UP031"]
